# playwright-trace-analyzer

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Justfile  README.md  pyproject.toml  research.md
.github/workflows/: build_and_publish.yml
playwright_trace_analyzer/: __init__.py  cli.py  models.py  parser.py
playwright_trace_analyzer/extractors/: actions.py  console.py  errors.py  metadata.py  network.py  screenshots.py
playwright_trace_analyzer/formatters/: json_fmt.py  markdown.py
tests/: conftest.py  test_cli_actions.py  test_cli_console.py  test_cli_metadata.py  test_cli_network.py  test_cli_root.py  test_cli_screenshots.py  test_cli_summary.py  test_import.py
